src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>BaumusterEx__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Extended baumuster: Code for drive (steering) and transmission 
(Drive: &quot;1&quot;=left-hand drive; &quot;2&quot; for right-hand drive)
(Transmission: &quot;1&quot;=manual; &quot;2&quot;=automatic)
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>BaumusterEx</label>
        <picklist>
            <picklistValues>
                <fullName>11=LeftManual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12=LeftAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21=RightManual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22=RightAuto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Baumuster__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: 6-digit-Baumuster
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>6-digit-Baumuster</inlineHelpText>
        <label>Baumuster</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyType__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle Body Type
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>BodyType</label>
        <picklist>
            <picklistValues>
                <fullName>Limousine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convertible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pullman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset)
Function: Vehicle Brand
Used in: Pagelayouts, Reports, Formula

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Vehicle Brand</inlineHelpText>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>卡车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>克莱斯勒</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>三菱</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>北京吉普</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>奔驰商务车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADILLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEVROLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HONDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYUNDAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAGUAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LANDROVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEXUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAZDA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBU_CKD__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset)
Function: Car is CBU or CKD
Used in: Pagelayouts, Reports, Formula

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Car is CBU or CKD</inlineHelpText>
        <label>CBU-CKD</label>
        <picklist>
            <picklistValues>
                <fullName>0=CKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=CBU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_ID__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset)
Function: ID of vehicle in CRM 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <displayFormat>{0000}</displayFormat>
        <inlineHelpText>ID of vehicle in CRM</inlineHelpText>
        <label>CRM ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset)
Function: Vehicle Class (Series)
Used in: Pagelayouts, Reports, Formula 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Vehicle Class (Series)</inlineHelpText>
        <label>Class</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A8L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ActiveHybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caliber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayenne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle Colour
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>40 黑色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 黑色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>104 羊绒黄</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>108 礁石灰</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112 油漆，铬铁矿黑，金属漆</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 油漆，钶铁黑，金属漆</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>182 榴石黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>185 榴石黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>189 墨绿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>197 曜岩黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>288 玄武灰色纳帕皮革</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 方镁石绿，金属漆</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345 碧蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>347 玉髓蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>349 天青石蓝金属色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>353 矿石蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>354 油漆，光玉髓红，金属漆</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>357 罗丽特蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>359 宝石蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>368 燧石灰</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>370 硫石灰</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>474 宝石褐金属色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>480 石棉绿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>487 砂金橙</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>492 油漆，金红石棕</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>494 油漆，锗石灰，金属漆</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5353 油漆，锡铅蓝，金属漆</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5359 油漆，宝石蓝，金属漆</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>541 玄武红</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>544 玉髓红</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Notes/Comments/Remarks for vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Notes/Comments/Remarks for vehicle</inlineHelpText>
        <label>Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Number__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Reservation number of MBCL
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Reservation number of MBCL</inlineHelpText>
        <label>Commission Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Mileage__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: The current mileage 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Current Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Description of the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Number__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Engine number
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Engine number</inlineHelpText>
        <label>Engine Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EuroVIN__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Euro VIN
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>EuroVIN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExKey__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: External Key for this vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>External Key for this vehicle</inlineHelpText>
        <label>ExKey</label>
        <referenceTo>External_Key__c</referenceTo>
        <relationshipLabel>Vehicle (Assets)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Expiry_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: ExpiryDate of Financing/Leasing 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>ExpiryDate of Financing/Leasing</inlineHelpText>
        <label>Finance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Registration_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Date of the first ever registration of the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Date of the first ever registration of the vehicle</inlineHelpText>
        <label>First Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Service_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Date of the last service of vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Last Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Aftersales_Dealer__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Latest Aftersales Dealer for this vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Latest Aftersales Dealer for this vehicle</inlineHelpText>
        <label>Latest Aftersales Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Vehicle Latest Aftersales Dealer)</relationshipLabel>
        <relationshipName>Assets_Vehicle_Latest_Aftersales_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Sales_Dealer__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Latest Sales Dealer for this vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Latest Sales Dealer for this vehicle</inlineHelpText>
        <label>Latest Sales Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Vehicle Latest Sales Dealer)</relationshipLabel>
        <relationshipName>Assets_Vehicle_Latest_Sales_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle Model Year
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Model Year</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle Model
Used in: Pagelayouts, Reports, Formula

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>116i MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116i Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>116i Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>118i Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>118i Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120i Convertible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120i Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125i Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1M Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0 L JTD I4 Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0 L VW I4 Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 L GEMA I4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7 L LH V6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020系列</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 L EGG V6[2]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 L Pentastar V6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>318Ci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>318i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>318iA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320Ci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320i Convertible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320i Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320i iMusic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320i Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320i Sport Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320Li Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320Li Luxury Lin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Mileage__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle mileage of the next service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Next Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Service_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Date of the next service of vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Next Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_Code__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: The vehicle&apos;s option code
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The vehicle&apos;s option code</inlineHelpText>
        <label>Option Code</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: The production date for vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>The production date for vehicle</inlineHelpText>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recall_Batches__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Number of recalls for the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Number of recalls for the vehicle</inlineHelpText>
        <label>Recall Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Flag whatever the vehicle has been recalled
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Flag whatever the vehicle has been recalled</inlineHelpText>
        <label>Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle Relationship linked to this contact
Used in: Page layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Vehicle Relationship linked to this contact</inlineHelpText>
        <label>Relationship</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesType__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Vehicle is part of Retail or Fleet
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Vehicle is part of Retail or Fleet</inlineHelpText>
        <label>SalesType</label>
        <picklist>
            <picklistValues>
                <fullName>0=Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Fleet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: Source of the vehicle (domestic/import)
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>Source of the vehicle (domestic/import)</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>0=Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle (Asset) 
Function: &apos;Manual&apos; or &apos;Automatic&apos;  transmission
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <inlineHelpText>&apos;Manual&apos; or &apos;Automatic&apos;  transmission</inlineHelpText>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>0=MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>